# agami-core

./: .dockerignore  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSING.md  NOTICE  README.md  SECURITY.md  dev.py  mock_ace008.py  pyproject.toml  render_previews.py
.claude/: settings.json  settings.local.example.json
.claude-plugin/: marketplace.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  cla.yml  release-image.yml  release-pypi.yml  test.yml
benchmarks/tpcds/: README.md  questions.json  run.py
deploy/: .env.example  .gitignore  Dockerfile  README.md  agami.env.example  deploy.sh  docker-compose.yml  entrypoint.sh
dev/: render_previews.py  reset-yamls.sh
docs/: credentials.md  format-spec.md  mcp-server.md  open-vs-hosted.md  privacy.md  self-hosting.md  troubleshooting.md  trust-layer.md  usage.md
docs/assets/: README.md
docs/design/: determinism-refactor.md  validated-through-use-descriptions.md
docs/install/: claude-code-cli.md  claude-code-cursor.md  claude-code-vscode.md  claude-cowork.md
migrations/core/: 001_serving.sql  002_runtime.sql  003_users.sql  004_oauth.sql  005_users_passwordless.sql  006_oidc_identity.sql  009_tool_calls_correlation.sql  010_oauth_refresh.sql  011_query_executions_ts.sql  012_guardrail_audit.sql  013_guardrail_audit_error_detail.sql  README.md
plugins/agami/: .orphaned_at
previews/: 01-login.html  02-login-password-only.html  03-login-error.html  04-admin-login.html  05-admin-users.html  06-admin-dashboard.html  07-admin-sessions.html  08-not-admin.html  09-landing.html  10-mcp-in-browser.html  11-not-authorized.html
services/telemetry-endpoint/: README.md  package.json  tsconfig.json  wrangler.toml
signatures/version1/: cla.json
tests/: catalog_helpers.py  conftest.py  test_ace028_in_process_default.py  test_ace041_masking.py  test_ace044_bounded_fetch.py  test_ace046_incremental_curation.py  test_ace047_schema_index.py  test_ace051_fail_closed.py  test_additivity.py  test_admin.py  test_admin_activity.py  test_admin_model.py  test_admin_seed_on_startup.py  test_agami_paths.py  test_aggregation_class.py  test_aggregation_enforcement.py  test_ah012_executor_seam.py  test_async_offload.py  test_auto_migrate.py  test_build_duckdb_attach.py  test_choice_field_decode.py  test_cloud_neutral_config.py  test_column_scope_adversarial.py  test_column_scope_gate.py  test_compose_org_context.py  test_compute_confidence.py  test_connect_resolve.py  test_connect_scripts.py  test_contracts.py  test_coverage_gate_self_evident.py  test_coverage_underenriched.py  test_db_activity_sink.py  test_deploy_preflight.py  test_derived_metrics.py  test_discover_prune.py  test_dsn_parsing.py  test_entity_anchor_and_area_desc.py  test_env_credentials.py  test_execute_sql_envelope.py  test_get_datasource_schema_sizing.py  (+76 more)
tests/e2e/: conftest.py  harness.py  test_role_floor_pg.py  test_safety_corpus.py  test_safety_envelope.py
tests/integration/: README.md  SMOKE_TEST_TRUST_LAYER.md  docker-compose.yml  test_model_parity.py  test_mysql_e2e_cli.sh  test_postgres_e2e_cli.sh  (+2 more)
tools/: README.md  run_skill_evals.py
(+142 files in other folders)
