# Tooling-only configuration for agami-core.
#
# This repo is a Claude Code *plugin* (skills + scripts), not a installable Python
# package — so there is intentionally NO [build-system] table. This file is the single
# source of truth for ruff + pytest config; CI (.github/workflows/ci.yml) reads it so
# the same rules run locally and in the gate, with nothing duplicated.

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["plugins", "tests"]

[tool.ruff.lint]
# Calibrated starting set — green day one, ratchet up later (REQ-017). E4/E7/E9 + F are
# ruff's defaults (real correctness bugs: undefined names, unused imports, bad syntax);
# I sorts imports. Line-length (E501) and naming (N) are deliberately left out for now —
# the existing tree has ~1900 long lines; enforce those in a later, dedicated pass.
select = ["E4", "E7", "E9", "F", "I"]
# Intentional patterns in existing scripts/tests, left for a later cleanup pass rather than
# forcing rewrites now: E402 (sys.path tweak before imports), E702 (one-line statements),
# E731 (lambda in a test helper), E741 ("l" loop var in a test), F841 (a documented unused var).
ignore = ["E402", "E702", "E731", "E741", "F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Coverage is measured but not yet enforced. Add --cov-fail-under=<baseline> in a later
# pass once the number is known, so the first CI run is green (REQ-017 calibration).
addopts = "--cov=plugins --cov-report=term-missing"
